<resources>
    <string name="app_name">Friend Circle</string>
    <string name="crazy_studio">Crazy Studio</string>
    <string name="HaveAccount">Already have an Account?</string>
    <string name="create_account">Create a new Account</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="have_an_account">I have an account?</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="item_name">Item Name</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="wait">Wait</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="bio">bio</string>
    <string name="tell_me_about_your_self">Tell me about your self</string>
    <string name="profile">Profile</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="if_your_change_amy_things_in_profile_your_can_tap_on_profile">If your change anything in profile your can tap on the profile icon</string>
    <string name="Theme">Theme</string>
    <string name="changes">Change</string>
    <string name="todo">TODO</string>
    <string name="user">User</string>
    <string name="enter_login_pass">enter login pass</string>
    <string name="make_pin_for_secure_your_privacy">Make Pin to Secure Your Privacy</string>
    <string name="first_make_fake_pin">First Make fake-PIN</string>
    <string name="pin_star">****</string>
    <string name="make_real_pin">Make Real-PIN</string>
    <string name="tap_make_pin">Tap make pin</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>

    <string name="terms_amp_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="read_more"><a href="https://crazy-studio-website.web.app/PrivacyPolicy.html">Read More</a></string>
    <string name="public_group_chating">Public Group Chating</string>
    <string name="icon">Icon</string>
    <string name="otp">OTP</string>


    <string name="otp_title">Please enter the 6 digit verification code</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_91_xxxx_xxx">sent to +91 XXXX XXX</string>
    <string name="change">Change</string>
    <string name="phone_number">Phone Number</string>
    <string name="tap_to_go">Tap to go</string>
    <string name="text_o">view</string>
    <string name="icon_of_camrea">icon of camrea</string>
    <string name="pdf_icon">Pdf Icon</string>
    <string name="copy_name">Copy Name</string>
    <string name="copy_number">Copy Number</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="tap_to_add_new_story">Tap to add new Story</string>
    <string name="tap_to_change_colors">Tap To Change Colors</string>
    <string name="Select_the_language">Select the language</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="tap_to_replay">Tap to reply</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="tap_to_open_in_full_screen">Tap to open in full screen</string>
    <string name="tap_to_copy_the_link">Tap to copy the link</string>
    <string-array name="lang">
        <item>English</item>
        <item>Hindi</item>

    </string-array>

</resources>