<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view"
        android:layout_centerHorizontal="true"
        android:text="@string/make_pin_for_secure_your_privacy"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text2"
        android:layout_centerHorizontal="true"
        android:text="@string/first_make_fake_pin"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/text_view"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/fakePin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:hint="@string/pin_star"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="170dp"
        android:layout_below="@id/text2"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text3"
        android:layout_centerHorizontal="true"
        android:text="@string/make_real_pin"
        android:textSize="24sp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/fakePin"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/real_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:hint="@string/pin_star"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="170dp"
        android:layout_below="@id/text3"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="TextFields" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_below="@id/real_pin"
        android:layout_marginEnd="15dp"
        android:id="@+id/create_Btu"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tap_make_pin" />

</RelativeLayout>